Modified to VAI

--- a/AppDef.json
+++ b/AppDef.json
@@ -1,7 +1,7 @@
 {
-    "name": "Ubuntu Linux for Intel",
-    "description": "Ubuntu Linux for Intel",
-    "author": "Nimbix, Inc.",
+    "name": "Vitis AI 1.1 on U50",
+    "description": "Xilinx Vitis AI 1.1 on Alveo U50",
+    "author": "Nimbix/Xilinx",
     "licensed": true,
     "classifications": [
         "Software Development"
@@ -16,44 +16,6 @@
         "OBJECT"
     ],
     "commands": {
-        "Batch": {
-            "path": "/bin/bash",
-            "interactive": false,
-            "name": "Batch",
-            "description": "Run a batch command using /bin/bash.  The output may be monitored directly in your web browser.",
-            "parameters": {
-                "-l": {
-                    "name": "-l",
-                    "description": "-l",
-                    "type": "CONST",
-                    "value": "-l",
-                    "positional": true,
-                    "required": true
-                },
-                "-c": {
-                    "name": "-c",
-                    "description": "-c",
-                    "type": "CONST",
-                    "value": "-c",
-                    "positional": true,
-                    "required": true
-                },
-                "command": {
-                    "name": "Command",
-                    "description": "Command to run",
-                    "type": "STR",
-                    "positional": true,
-                    "required": true
-                }
-            }
-        },
-        "Server": {
-            "path": "/sbin/init",
-            "interactive": true,
-            "name": "Server",
-            "description": "Launch a session with all boot services, including SSH (if installed).  Connection address and credentials will appear in your web browser once available.",
-            "parameters": {}
-        },
         "GUI": {
             "path": "/usr/local/bin/nimbix_desktop",
             "interactive": true,
