--- a/AppDef.json
+++ b/AppDef.json
@@ -1,6 +1,6 @@
 {
-    "name": "Vitis AI 1.1 on U50",
-    "description": "Xilinx Vitis AI 1.1 on Alveo U50",
+    "name": "Vitis AI 1.2 on Alveo U50",
+    "description": "Xilinx Vitis AI 1.2 on Alveo U50",
     "author": "Xilinx",
     "licensed": true,
     "classifications": [
